header section structure done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,71 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="wrapper wrapper--header">
+        <!-- top header started here -->
+        <div class="header__top">
+          <ul class="contact-info">
+            <li class="contact-info__list">
+              <a href="tel:+00 123 4455 6666" class="contact-info__list_link contact-info__list_link--tel" title="+00 123 4455 6666">+00 123 4455 6666</a>
+            </li>
+            <li class="contact-info__list">
+              <a href="mailto:mail@example.com" class="contact-info__list_link contact-info__list_link--mail" title="mail@example.com">mail@example.com</a>
+            </li>
+          </ul>
+          <ul class="header-social">
+            <li class="header-social__list">
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--facebook" title="Facebook">Facebook</a>
+            </li>
+            <li class="header-social__list">
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--twitter" title="Twitter">Twitter</a>
+            </li>
+            <li class="header-social__list">
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--dribbble" title="Dribbble">Dribbble</a>
+            </li>
+            <li class="header-social__list">
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--instagram" title="Instagram">Instagram</a>
+            </li>
+          </ul>
+        </div>
+        <!-- top header ends here -->
+        <!-- bottom header started here -->
+        <div class="header-bottom">
+          <div class="header-bottom__left">
+            <h1 class="logo">
+              <a href="./index.html" class="logo__link" title="One-Health">One-health</a>
+            </h1>
+            <div class="search">
+              <a href="#FIXME" class="search__cta" title="Search">Search</a>
+              <input type="text" class="search__keyword" placeholder="Enter keyword.." />
+            </div>
+          </div>
+          <div class="header-bottom__right">
+            <nav class="navbar">
+              <ul class="navbar__menu">
+                <li class="navbar__menu_list">
+                  <a href="#FIXME" class="navbar__menu_list_link" title="Home">Home</a>
+                </li>
+                <li class="navbar__menu_list">
+                  <a href="#FIXME" class="navbar__menu_list_link" title="About us">About us</a>
+                </li>
+                <li class="navbar__menu_list">
+                  <a href="#FIXME" class="navbar__menu_list_link" title="Doctors">Doctors</a>
+                </li>
+                <li class="navbar__menu_list">
+                  <a href="#FIXME" class="navbar__menu_list_link" title="News">News</a>
+                </li>
+                <li class="navbar__menu_list">
+                  <a href="#FIXME" class="navbar__menu_list_link" title="Contact">Contact</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="auth">
+              <a href="#FIXME" class="auth__cta" title="Login/Register">Login/register</a>
+            </div>
+          </div>
+        </div>
+        <!-- bottom header ends here -->
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
