banner section structure done

--- a/index.html
+++ b/index.html
@@ -112,7 +112,28 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!--banner section start-->
+      <section class="banner">
+        <div class="wrapper">
+          <p class="banner__tag_line">Let's make your life happier</p>
+          <h2 class="banner__heading">Healthy Living</h2>
+          <div class="connect">
+            <a href="#FIXME" class="connect__cta" title="Let' connect">Let' connect</a>
+          </div>
+          <ul class="banner__card">
+            <li class="banner__card_list">
+              <a href="#FIXME" class="banner__card_list_link" title="Chat with a doctors">Chat with a doctors</a>
+            </li>
+            <li class="banner__card_list">
+              <a href="#FIXME" class="banner__card_list_link" title="One-health protection">One-health protection</a>
+            </li>
+            <li class="banner__card_list">
+              <a href="#FIXME" class="banner__card_list_link" title="One-health pharmacy">One-health pharmacy</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--banner section end-->
     </main>
     <!--main section end-->
 
