health center section structure done

--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@
         </div>
       </section>
       <!--banner section end-->
+      <!--health center section start-->
+      <section class="health-center">
+        <div class="wrapper">
+          <div class="health-center__left">
+            <h3 class="health-center__left_heading">Welcome to Your Health Center</h3>
+            <p class="health-center__left_paragraph">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
+            <div class="health-center__left_learn_more">
+              <a href="#FIXME" class="health-center__left_learn_more_cta" title="Learn more">Learn more</a>
+            </div>
+          </div>
+          <div class="health-center__right">
+            <figure class="health-center__right_image">
+              <img src="https://dummyimage.com/271x351/F9D3BF/000.jpg" alt="Doctor">
+            </figure>
+          </div>
+        </div>
+      </section>
+      <!--health center section end-->
     </main>
     <!--main section end-->
 
