--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             </div>
           </div>
           <div class="header-bottom__right">
+            <div class="hamburger">
+              <span class="hamburger__line hamburger__line--one">line</span>
+              <span class="hamburger__line hamburger__line--two">line</span>
+              <span class="hamburger__line hamburger__line--three">line</span>
+            </div>
             <nav class="navbar">
               <ul class="navbar__menu">
                 <li class="navbar__menu_list">
@@ -138,7 +143,7 @@
       <section class="health-center">
         <div class="wrapper">
           <div class="health-center__left">
-            <h3 class="health-center__left_heading">Welcome to Your Health Center</h3>
+            <h3 class="main-heading">Welcome to Your Health Center</h3>
             <p class="health-center__left_paragraph">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
             <div class="health-center__left_learn_more">
               <a href="#FIXME" class="health-center__left_learn_more_cta" title="Learn more">Learn more</a>
@@ -152,6 +157,52 @@
         </div>
       </section>
       <!--health center section end-->
+      <!--our doctor section start-->
+      <section class="our-doctor">
+        <div class="wrapper wrapper--card">
+          <h3 class="main-heading">Our Doctors</h3>
+          <ul class="our-doctor__card">
+            <li class="our-doctor__card_list">
+              <a href="#FIXME" class="our-doctor__card_list_link" title="Dr. Stein Albert">
+                <figure class="our-doctor__card_list_image">
+                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Stein Albert">
+                </figure>
+                <div class="our-doctor__card_list_content">
+                  <h4 class="our-doctor__card_list_heading">Dr. stein albert</h4>
+                  <h5 class="our-doctor__card_list_position">Cardiology</h5>
+                </div>
+              </a>
+            </li>
+            <li class="our-doctor__card_list">
+              <a href="#FIXME" class="our-doctor__card_list_link" title="Dr. Alexa Melvin">
+                <figure class="our-doctor__card_list_image">
+                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Alexa Melvin">
+                </figure>
+                <div class="our-doctor__card_list_content">
+                  <h4 class="our-doctor__card_list_heading">Dr. alexa melvin</h4>
+                  <h5 class="our-doctor__card_list_position">Dental</h5>
+                </div>
+              </a>
+            </li>
+            <li class="our-doctor__card_list">
+              <a href="#FIXME" class="our-doctor__card_list_link" title="Dr. Rebecca Steffany">
+                <figure class="our-doctor__card_list_image">
+                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Rebecca Steffany">
+                </figure>
+                <div class="our-doctor__card_list_content">
+                  <h4 class="our-doctor__card_list_heading">Dr. rebecca steffany</h4>
+                  <h5 class="our-doctor__card_list_position">General health</h5>
+                </div>
+              </a>
+            </li>
+          </ul>
+          <div class="slider-action">
+            <a href="#FIXME" class="slider-action__cta slider-action__cta--left" title="Left">Left</a>
+            <a href="#FIXME" class="slider-action__cta slider-action__cta--right" title="Right">Right</a>
+          </div>
+        </div>
+      </section>
+      <!--our doctor section end-->
     </main>
     <!--main section end-->
 
