latest news section structure done

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </ul>
             </nav>
             <div class="auth">
-              <a href="#FIXME" class="auth__cta" title="Login/Register">Login/register</a>
+              <a href="#FIXME" class="auth__cta similar-cta" title="Login/Register">Login/register</a>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
           <p class="banner__tag_line">Let's make your life happier</p>
           <h2 class="banner__heading">Healthy Living</h2>
           <div class="connect">
-            <a href="#FIXME" class="connect__cta" title="Let' connect">Let' connect</a>
+            <a href="#FIXME" class="connect__cta similar-cta" title="Let' consult">Let' consult</a>
           </div>
           <ul class="banner__card">
             <li class="banner__card_list">
@@ -146,12 +146,12 @@
             <h3 class="main-heading">Welcome to Your Health Center</h3>
             <p class="health-center__left_paragraph">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
             <div class="health-center__left_learn_more">
-              <a href="#FIXME" class="health-center__left_learn_more_cta" title="Learn more">Learn more</a>
+              <a href="#FIXME" class="health-center__left_learn_more_cta similar-cta" title="Learn more">Learn more</a>
             </div>
           </div>
           <div class="health-center__right">
             <figure class="health-center__right_image">
-              <img src="https://dummyimage.com/271x351/F9D3BF/000.jpg" alt="Doctor">
+              <img src="https://dummyimage.com/271x351/F9D3BF/000.jpg" alt="Doctor" />
             </figure>
           </div>
         </div>
@@ -159,16 +159,16 @@
       <!--health center section end-->
       <!--our doctor section start-->
       <section class="our-doctor">
-        <div class="wrapper wrapper--card">
-          <h3 class="main-heading">Our Doctors</h3>
+        <div class="wrapper wrapper--doctor">
+          <h3 class="main-heading main-heading--capitalize">Our doctors</h3>
           <ul class="our-doctor__card">
             <li class="our-doctor__card_list">
               <a href="#FIXME" class="our-doctor__card_list_link" title="Dr. Stein Albert">
                 <figure class="our-doctor__card_list_image">
-                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Stein Albert">
+                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Stein Albert" />
                 </figure>
                 <div class="our-doctor__card_list_content">
-                  <h4 class="our-doctor__card_list_heading">Dr. stein albert</h4>
+                  <h4 class="card_list_heading">Dr. stein albert</h4>
                   <h5 class="our-doctor__card_list_position">Cardiology</h5>
                 </div>
               </a>
@@ -176,10 +176,10 @@
             <li class="our-doctor__card_list">
               <a href="#FIXME" class="our-doctor__card_list_link" title="Dr. Alexa Melvin">
                 <figure class="our-doctor__card_list_image">
-                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Alexa Melvin">
+                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Alexa Melvin" />
                 </figure>
                 <div class="our-doctor__card_list_content">
-                  <h4 class="our-doctor__card_list_heading">Dr. alexa melvin</h4>
+                  <h4 class="card_list_heading">Dr. alexa melvin</h4>
                   <h5 class="our-doctor__card_list_position">Dental</h5>
                 </div>
               </a>
@@ -187,10 +187,10 @@
             <li class="our-doctor__card_list">
               <a href="#FIXME" class="our-doctor__card_list_link" title="Dr. Rebecca Steffany">
                 <figure class="our-doctor__card_list_image">
-                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Rebecca Steffany">
+                  <img src="https://dummyimage.com/168x182/EAEAEA/000.jpg" alt="Dr. Rebecca Steffany" />
                 </figure>
                 <div class="our-doctor__card_list_content">
-                  <h4 class="our-doctor__card_list_heading">Dr. rebecca steffany</h4>
+                  <h4 class="card_list_heading">Dr. rebecca steffany</h4>
                   <h5 class="our-doctor__card_list_position">General health</h5>
                 </div>
               </a>
@@ -203,6 +203,78 @@
         </div>
       </section>
       <!--our doctor section end-->
+      <!--latest news section start-->
+      <section class="latest-news">
+        <div class="wrapper wrapper--news">
+          <h3 class="main-heading main-heading--capitalize">Latest news</h3>
+          <ul class="latest-news__card">
+            <li class="latest-news__card_list">
+              <figure class="latest-news__card_list_image">
+                <img src="https://dummyimage.com/184x99/79766f/fff.jpg" alt="News Image" />
+                <figcaption class="latest-news__card_list_image_caption">Covid19</figcaption>
+              </figure>
+              <div class="latest-news__card_list_content">
+                <h4 class="card_list_heading">List of Countries without Coronavirus case</h4>
+                <div class="latest-news__card_list_content_info">
+                  <figure class="latest-news__card_list_content_info_image">
+                    <img src="https://dummyimage.com/20x20/79766f/fff.jpg" alt="Roger Adams" />
+                  </figure>
+                  <div class="latest-news__card_list_content_info_name">
+                    <span>Roger adams</span>
+                  </div>
+                  <div class="latest-news__card_list_content_info_date">
+                    <span>1 week ago</span>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="latest-news__card_list">
+              <figure class="latest-news__card_list_image">
+                <img src="https://dummyimage.com/184x99/79766f/fff.jpg" alt="News Image" />
+                <figcaption class="latest-news__card_list_image_caption">Covid19</figcaption>
+              </figure>
+              <div class="latest-news__card_list_content">
+                <h4 class="card_list_heading">Recovery Room: News beyond the pandemic</h4>
+                <div class="latest-news__card_list_content_info">
+                  <figure class="latest-news__card_list_content_info_image">
+                    <img src="https://dummyimage.com/20x20/79766f/fff.jpg" alt="Roger Adams" />
+                  </figure>
+                  <div class="latest-news__card_list_content_info_name">
+                    <span>Roger adams</span>
+                  </div>
+                  <div class="latest-news__card_list_content_info_date">
+                    <span>4 weeks ago</span>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="latest-news__card_list">
+              <figure class="latest-news__card_list_image">
+                <img src="https://dummyimage.com/184x99/79766f/fff.jpg" alt="News Image" />
+                <figcaption class="latest-news__card_list_image_caption">Covid19</figcaption>
+              </figure>
+              <div class="latest-news__card_list_content">
+                <h4 class="card_list_heading">What is the impact of eating too much sugar?</h4>
+                <div class="latest-news__card_list_content_info">
+                  <figure class="latest-news__card_list_content_info_image">
+                    <img src="https://dummyimage.com/20x20/79766f/fff.jpg" alt="Diego Simmons" />
+                  </figure>
+                  <div class="latest-news__card_list_content_info_name">
+                    <span>Diego simmons</span>
+                  </div>
+                  <div class="latest-news__card_list_content_info_date">
+                    <span>2 months ago</span>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="latest-news__cta">
+            <a href="#FIXME" class="latest-news__cta_link similar-cta" title="Read more">Read more</a>
+          </div>
+        </div>
+      </section>
+      <!--latest news section end-->
     </main>
     <!--main section end-->
 
