appointment section structure done

--- a/index.html
+++ b/index.html
@@ -275,6 +275,44 @@
         </div>
       </section>
       <!--latest news section end-->
+      <!--appointment section start-->
+      <section class="appointment">
+        <div class="wrapper wrapper--appointment">
+          <h3 class="main-heading">Make an Appointment</h3>
+          <form action="#FIXME" class="form" method="post">
+            <div class="form__container form__container--top">
+              <div class="form__container_group">
+                <input type="text" class="form__container_group_content" name="full-name" placeholder="Full name" />
+              </div>
+              <div class="form__container_group">
+                <input type="text" class="form__container_group_content" name="email" placeholder="Email address.." />
+              </div>
+              <div class="form__container_group">
+                <input type="date" class="form__container_group_content form__container_group_content--date-picker" name="date" />
+              </div>
+              <div class="form__container_group">
+                <select name="general-health" class="form__container_group_content form__container_group_content--dropdown">
+                  <option value="general health">General health</option>
+                  <option value="Health">Health</option>
+                  <option value="Health">Health</option>
+                </select>
+              </div>
+            </div>
+            <div class="form__container form__container--bottom">
+              <div class="form__container_group">
+                <input type="text" class="form__container_group_content" name="number" placeholder="Number.." />
+              </div>
+              <div class="form__container_group">
+                <textarea name="message" class="form__container_group_content form__container_group_content--textarea" placeholder="Enter Message.."></textarea>
+              </div>
+            </div>
+            <div class="form__container form__container--submit">
+              <input type="submit" name="send" class="form__container_cta similar-cta" value="Submit request" />
+            </div>
+          </form>
+        </div>
+      </section>
+      <!--appointment section end-->
     </main>
     <!--main section end-->
 
