one health app section structure done

--- a/index.html
+++ b/index.html
@@ -313,6 +313,30 @@
         </div>
       </section>
       <!--appointment section end-->
+      <!--one health app section start-->
+      <section class="one-health-app">
+        <div class="wrapper wrapper--one-health-app">
+          <figure class="app-image">
+            <img src="https://dummyimage.com/140x208/78665F/fff.jpg" alt="One Health Application">
+          </figure>
+          <div class="app-content">
+            <h5 class="app-content__heading">Get easy access of all features using One Health Application</h5>
+            <div class="app-content__cta">
+              <a href="#FIXME" class="app-content__cta_link" target="_blank" title="Google play">
+                <figure class="app-content__cta_link_image">
+                  <img src="https://dummyimage.com/132x40/000/fff.jpg" alt="Google Play">
+                </figure>
+              </a>
+              <a href="#FIXME" class="app-content__cta_link" target="_blank" title="Apple store">
+                <figure class="app-content__cta_link_image">
+                  <img src="https://dummyimage.com/132x40/000/fff.jpg" alt="Apple Store">
+                </figure>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--one health app section end-->
     </main>
     <!--main section end-->
 
