footer section structure done

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
           </ul>
           <ul class="header-social">
             <li class="header-social__list">
-              <a href="#FIXME" class="header-social__list_link header-social__list_link--facebook" title="Facebook">Facebook</a>
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--facebook" target="_blank" title="Facebook">Facebook</a>
             </li>
             <li class="header-social__list">
-              <a href="#FIXME" class="header-social__list_link header-social__list_link--twitter" title="Twitter">Twitter</a>
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--twitter" target="_blank" title="Twitter">Twitter</a>
             </li>
             <li class="header-social__list">
-              <a href="#FIXME" class="header-social__list_link header-social__list_link--dribbble" title="Dribbble">Dribbble</a>
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--dribbble" target="_blank" title="Dribbble">Dribbble</a>
             </li>
             <li class="header-social__list">
-              <a href="#FIXME" class="header-social__list_link header-social__list_link--instagram" title="Instagram">Instagram</a>
+              <a href="#FIXME" class="header-social__list_link header-social__list_link--instagram" target="_blank" title="Instagram">Instagram</a>
             </li>
           </ul>
         </div>
@@ -342,7 +342,104 @@
 
     <!--footer section start-->
     <footer>      
-
+      <div class="wrapper">
+        <div class="footer-top">
+          <ul class="footer-top__container">
+            <li class="footer-top__list">
+              <h6 class="footer-top__list_heading">Company</h6>
+              <ul class="footer-top__list_container">
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="About us">About us</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Career">Career</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Editorial team">Editorial team</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Protection">Protection</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer-top__list">
+              <h6 class="footer-top__list_heading">More</h6>
+              <ul class="footer-top__list_container">
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Terms & condition">Terms & condition</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Privacy">Privacy</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Advertise">Advertise</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="Join as Doctors">Join as Doctors</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer-top__list">
+              <h6 class="footer-top__list_heading">Our partner</h6>
+              <ul class="footer-top__list_container">
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="One-fitness">One-fitness</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="One-drugs">One-drugs</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="#FIXME" class="footer-top__list_container_list_link" title="One-live">One-live</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer-top__list">
+              <h6 class="footer-top__list_heading">Contact</h6>
+              <ul class="footer-top__list_container">
+                <li class="footer-top__list_container_list">
+                  <address>
+                    <a href="#FIXME" class="footer-top__list_container_list_link" target="_blank" title="351 Willow Street Franklin, MA 02038">351 Willow Street Franklin, MA 02038</a>
+                  </address>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="tel:701-573-7582" class="footer-top__list_container_list_link" title="701-573-7582">701-573-7582</a>
+                </li>
+                <li class="footer-top__list_container_list">
+                  <a href="mailto:healthcare@temporary.net" class="footer-top__list_container_list_link" target="_blank" title="healthcare@temporary.net">healthcare@temporary.net</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <div class="footer-top__media">
+            <h6 class="footer-top__media_heading">Social media</h6>
+            <ul class="footer-top__social_media">
+              <li class="footer-top__social_media_list">
+                <a href="#FIXME" class="footer-top__social_media_list_link footer-top__social_media_list_link--facebook" target="_blank" title="Facebook">Facebook</a>
+              </li>
+              <li class="footer-top__social_media_list">
+                <a href="#FIXME" class="footer-top__social_media_list_link footer-top__social_media_list_link--twitter" target="_blank" title="Twitter">Twitter</a>
+              </li>
+              <li class="footer-top__social_media_list">
+                <a href="#FIXME" class="footer-top__social_media_list_link footer-top__social_media_list_link--google" target="_blank" title="Google +">Google +</a>
+              </li>
+              <li class="footer-top__social_media_list">
+                <a href="#FIXME" class="footer-top__social_media_list_link footer-top__social_media_list_link--instagram" target="_blank" title="Instagram">Instagram</a>
+              </li>
+              <li class="footer-top__social_media_list">
+                <a href="#FIXME" class="footer-top__social_media_list_link footer-top__social_media_list_link--linkedin" target="_blank" title="Linkedin">Linkedin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="footer-bottom__copyright">
+            <span>Copyright &copy; 2020 <a href="#FIXME" class="footer-bottom__copyright_link" target="_blank" title="MACode ID">MACode ID</a>. All right reserved</span>
+          </div>
+          <div class="footer-bottom__go_top">
+            <a href="#FIXME" class="footer-bottom__go_top_cta" title="Back to top">Back to top</a>
+          </div>
+        </div>
+      </div>
     </footer>
     <!--footer section end-->
   </div>
