added active class in navbar menu and span for logo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="header-bottom">
           <div class="header-bottom__left">
             <h1 class="logo">
-              <a href="./index.html" class="logo__link" title="One-Health">One-health</a>
+              <a href="./index.html" class="logo__link" title="One-Health"><span class="logo__link_color">One-health</a>
             </h1>
             <div class="search">
               <a href="#FIXME" class="search__cta" title="Search">Search</a>
@@ -90,7 +90,7 @@
             <nav class="navbar">
               <ul class="navbar__menu">
                 <li class="navbar__menu_list">
-                  <a href="#FIXME" class="navbar__menu_list_link" title="Home">Home</a>
+                  <a href="#FIXME" class="navbar__menu_list_link navbar__menu_list_link--active" title="Home">Home</a>
                 </li>
                 <li class="navbar__menu_list">
                   <a href="#FIXME" class="navbar__menu_list_link" title="About us">About us</a>
@@ -107,7 +107,7 @@
               </ul>
             </nav>
             <div class="auth">
-              <a href="#FIXME" class="auth__cta similar-cta" title="Login/Register">Login/register</a>
+              <a href="#FIXME" class="auth__cta similar-cta" title="Login/Register">Login / register</a>
             </div>
           </div>
         </div>
