added banner image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body>
+<body class="home">
   <!--container start-->
   <div class="container">
     <!--header section start-->
@@ -120,10 +120,15 @@
       <!--banner section start-->
       <section class="banner">
         <div class="wrapper">
-          <p class="banner__tag_line">Let's make your life happier</p>
-          <h2 class="banner__heading">Healthy Living</h2>
-          <div class="connect">
-            <a href="#FIXME" class="connect__cta similar-cta" title="Let' consult">Let' consult</a>
+          <figure class="banner__image">
+            <img src="https://dummyimage.com/1287x384/6d6e6b/fff.jpg" class="banner__image_attachment" alt="Banner Image">
+          </figure>
+          <div class="banner__content">
+            <p class="banner__content_tag_line">Let's make your life happier</p>
+            <h2 class="banner__content_heading">Healthy Living</h2>
+            <div class="connect">
+              <a href="#FIXME" class="connect__cta similar-cta" title="Let' consult">Let' consult</a>
+            </div>
           </div>
           <ul class="banner__card">
             <li class="banner__card_list">
@@ -317,7 +322,7 @@
       <section class="one-health-app">
         <div class="wrapper wrapper--one-health-app">
           <figure class="app-image">
-            <img src="https://dummyimage.com/140x208/78665F/fff.jpg" alt="One Health Application">
+            <img src="https://dummyimage.com/140x208/78665F/fff.jpg" class="app-image__attachment" alt="One Health Application">
           </figure>
           <div class="app-content">
             <h5 class="app-content__heading">Get easy access of all features using One Health Application</h5>
